demo/src/main/java/com/example/demo/errors/utils/MessageErrorMedida.java
package com.example.demo.errors.utils;

public class MessageErrorMedida {
    public static String MESSAGERRORIMCMEDIDAZERADA = "Altura ou peso zerada ";
    public static String MESSAGERRORIMCMEDIDANEGATIVA = "Altura ou peso negativa";
    public static String MESSAGERRORIACMEDIDAZERADA = "Altura ou Circunferencia do Quadril zerada ";
    public static String MESSAGERRORIACMEDIDANEGATIVA ="Circunferencia do Quadril ou Altura negativo";
    public static String MESSAGEERROCALCULONAOCADASTRADO = "Forma de calculo não cadastrada";

}
